Added some images to test out in the site.

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -23,17 +23,17 @@ body{
 }
 
 .carousel-image-1{
-  background:url('../img/image1.jpg');
+  background:url('../img/SliderLightBulb.jpeg');
   background-size:cover;
 }
 
 .carousel-image-2{
-  background:url('../img/image2.jpg');
+  background:url('../img/brick-brickwall-brickwork.jpg');
   background-size:cover;
 }
 
 .carousel-image-3{
-  background:url('../img/image3.jpg');
+  background:url('../img/BlurBrightBulb.jpg');
   background-size:cover;
 }
 
