--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,12 +28,12 @@ body{
 }
 
 .carousel-image-2{
-  background:url('../img/brick-brickwall-brickwork.jpg');
+  background:url('../img/pipes.jpg');
   background-size:cover;
 }
 
 .carousel-image-3{
-  background:url('../img/BlurBrightBulb.jpg');
+  background:url('../img/DarkSolar.jpg');
   background-size:cover;
 }
 
@@ -44,7 +44,7 @@ body{
 #home-heading{
   position:relative;
   min-height:200px;
-  background:url('../img/lights.jpg');
+  background:url('../img/BlurLeds.jpg');
   background-attachment:fixed;
   background-repeat:no-repeat;
   text-align:center;
