--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -41,7 +41,7 @@ body{
   font-size:$icon-size;
 }
 
-#home-heading{
+#about-heading{
   position:relative;
   min-height:200px;
   background:url('../img/BlurLeds.jpg');
@@ -60,19 +60,21 @@ body{
   height:100%;
 }
 
-#video-play{
-  position:relative;
-  min-height:200px;
-  background:url('../img/media.jpg');
-  background-attachment:fixed;
-  background-repeat:no-repeat;
-  background-position:0 -300px;
-  text-align:center;
-  color:#fff;
-  a{
+
+  #what-we-do-heading{
+    position:relative;
+    min-height:200px;
+    background:url('../img/brickwall.jpg');
+    background-attachment:fixed;
+    background-repeat:no-repeat;
+    background-position:0 -300px;
+    opacity: 80%;
+    text-align:center;
     color:#fff;
+    a{
+      color:#fff;
+    }
   }
-}
 
 footer#main-footer{
   background:#000;
