--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -61,7 +61,7 @@ body{
 }
 
 
-  #what-we-do-heading{
+  #what-we-do-heading, #contact{
     position:relative;
     min-height:200px;
     background:url('../img/brickwall.jpg');
@@ -110,3 +110,5 @@ footer#main-footer{
     background:#333;
   }
 }
+
+
