--- a/src/css/style.css
+++ b/src/css/style.css
@@ -58,6 +58,20 @@ body {
   #what-we-do-heading a, #contact a {
     color: #fff; }
 
+#contact {
+  position: relative;
+  min-height: 200px;
+  background: url("../img/bulbs.jpeg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 0 -200px;
+  opacity: 20%;
+  text-align: center;
+  color: #fff; }
+  #contact a {
+    color: #fff; }
+
 footer#main-footer {
   background: #000;
   color: #fff; }
