--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -76,6 +76,22 @@ body{
     }
   }
 
+ #contact{
+    position:relative;
+    min-height:200px;
+    background:url('../img/bulbs.jpeg');
+    background-attachment:fixed;
+    background-repeat:no-repeat;
+    background-size: cover;
+    background-position:0 -200px;
+    opacity: 20%;
+    text-align:center;
+    color:#fff;
+    a{
+      color:#fff;
+    }
+  }
+
 footer#main-footer{
   background:#000;
   color:#fff;
