Updated site for dad.

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
 }
 
 .carousel-image-1 {
-  background: url("../img/CarGarage.jpg");
+  background: url("../img/CounterTop.jpg");
   background-size: cover;
 }
 
@@ -28,7 +28,7 @@ body {
 }
 
 .carousel-image-3 {
-  background: url("../img/PoolGearCrop.jpg");
+  background: url("../img/Smuckers.jpg");
   background-size: cover;
 }
 
