--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,12 @@ body {
   padding-right: 1rem !important;
 }
 
+@media (max-width: 800px) {
+  #myCarousel {
+    display: none !important;
+  }
+}
+
 .navbar-brand {
   font-size: 25px;
   padding-left: 1rem !important;
@@ -19,10 +25,14 @@ body {
   border-left: #444 3px solid;
 }
 
-@media (max-width: 800px) {
-  #myCarousel {
-    display: none !important;
-  }
+.carousel-control-next {
+  top: 200px;
+  bottom: 200px;
+}
+
+.carousel-control-prev {
+  top: 200px;
+  bottom: 200px;
 }
 
 .carousel-item {
